--- a/project-management-app/src/app/auth/components/edit-profile-form/edit-profile-form.component.html
+++ b/project-management-app/src/app/auth/components/edit-profile-form/edit-profile-form.component.html
@@ -1,7 +1,12 @@
-<div class="container">
+<div class="container__users-form">
   <h2>Edit profile</h2>
-  <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="editProfileForm">
-    <p>
+  <form
+    (ngSubmit)="onSubmit(ngForm)"
+    #ngForm="ngForm"
+    [formGroup]="editProfileForm"
+    class="form-container"
+  >
+    <div>
       <mat-form-field class="input__edit-profile">
         <mat-label for="name">Username: </mat-label>
         <input
@@ -12,16 +17,14 @@
           name="name"
           formControlName="name"
           [(ngModel)]="name"
+          (blur)="getNameErrorMessage()"
         />
-        <mat-error *ngIf="editProfileForm.get('name')?.errors?.['required']"
-          >Username is required</mat-error
-        >
         <button *ngIf="name" matSuffix mat-icon-button aria-label="Clear" (click)="name = ''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-    </p>
-    <p>
+    </div>
+    <div>
       <mat-form-field class="input__edit-profile">
         <mat-label for="login">Login: </mat-label>
         <input
@@ -32,13 +35,14 @@
           name="login"
           formControlName="login"
           [(ngModel)]="login"
+          (blur)="getLoginErrorMessage()"
         />
         <button *ngIf="login" matSuffix mat-icon-button aria-label="Clear" (click)="login = ''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-    </p>
-    <p>
+    </div>
+    <div>
       <mat-form-field class="input__edit-profile">
         <mat-label for="password">Password: </mat-label>
         <input
@@ -49,6 +53,7 @@
           placeholder="password"
           formControlName="password"
           [(ngModel)]="password"
+          (blur)="getPasswordErrorMessage()"
         />
         <button
           mat-icon-button
@@ -69,18 +74,19 @@
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-    </p>
-    <p>
+    </div>
+    <div>
       <mat-form-field class="input__edit-profile">
-        <mat-label for="repeatPassword">Repeat password: </mat-label>
+        <mat-label for="confirmPassword">Confirm password: </mat-label>
         <input
           matInput
-          id="repeatPassword"
+          id="confirmPassword"
           [type]="hide ? 'password' : 'text'"
-          name="repeatPassword"
-          placeholder="repeatPassword"
-          formControlName="repeatPassword"
-          [(ngModel)]="repeatPassword"
+          name="confirmPassword"
+          placeholder="confirmPassword"
+          formControlName="confirmPassword"
+          [(ngModel)]="confirmPassword"
+          (blur)="getConfirmPasswordErrorMessage()"
         />
         <button
           mat-icon-button
@@ -92,16 +98,30 @@
           <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
         </button>
         <button
-          *ngIf="repeatPassword"
+          *ngIf="confirmPassword"
           matSuffix
           mat-icon-button
           aria-label="Clear"
-          (click)="repeatPassword = ''"
+          (click)="confirmPassword = ''"
         >
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-    </p>
+    </div>
+    <div class="errors-container">
+      <div class="errors-container__type" *ngIf="editProfileForm.get('name')?.invalid">
+        <mat-error *ngFor="let error of nameErrors">{{ error }} </mat-error>
+      </div>
+      <div class="errors-container__type" *ngIf="editProfileForm.get('login')?.invalid">
+        <mat-error *ngFor="let error of loginErrors">{{ error }} </mat-error>
+      </div>
+      <div class="errors-container__type" *ngIf="editProfileForm.get('password')?.invalid">
+        <mat-error *ngFor="let error of passwordErrors">{{ error }} </mat-error>
+      </div>
+      <div class="errors-container__type" *ngIf="editProfileForm.get('confirmPassword')?.invalid">
+        <mat-error *ngFor="let error of confirmPasswordErrors">{{ error }} </mat-error>
+      </div>
+    </div>
     <div class="edit__controls">
       <button
         mat-raised-button
