--- a/project-management-app/src/app/auth/components/edit-profile-form/edit-profile-form.component.scss
+++ b/project-management-app/src/app/auth/components/edit-profile-form/edit-profile-form.component.scss
@@ -23,3 +23,26 @@ input.example-right-align::-webkit-inner-spin-button {
   align-items: center;
   justify-content: center;
 }
+
+.errors-container {
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+
+  &__type {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    margin: 10px 0;
+  }
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
