--- a/project-management-app/src/app/boards/components/board-preview/board-preview.component.scss
+++ b/project-management-app/src/app/boards/components/board-preview/board-preview.component.scss
@@ -7,7 +7,13 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  background-color: lighten(#d9dde3, 10);
 
+  &:hover {
+    box-shadow: 0px 3px 1px -1px rgb(0 0 0 / 20%), 0px 2px 1px 0px rgb(0 0 0 / 14%),
+      0px 1px 3px 0px rgb(0 0 0 / 12%);
+    z-index: 2;
+  }
   &__inner {
     display: flex;
     flex-direction: row;
