--- a/project-management-app/src/app/tasks/components/column-item/column-item.component.scss
+++ b/project-management-app/src/app/tasks/components/column-item/column-item.component.scss
@@ -1,61 +1,41 @@
 .column-wrapper {
   width: 300px;
+  box-sizing: border-box;
   cursor: pointer;
   border-radius: 2px;
   overflow: hidden;
   border-radius: 7px;
-  // border: 1px solid darken(#e0e0e0, 30);
   border: none;
   margin: 2px;
 }
 
-.container-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: nowrap;
-  gap: 20px;
-}
-
 .column-item {
+  box-sizing: border-box;
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
-  gap: 0px;
   height: 60px;
-  padding: 0;
+  padding: 0px 10px 0px 20px;
   margin: 0px;
   width: 100%;
   background-color: darken(#e0e0e0, 60);
   color: white;
   border-radius: 7px;
-  // border: 1px solid darken(#e0e0e0, 30);
   border: none;
   overflow: hidden;
+
+  &:hover {
+    box-shadow: 0px 4px 2px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%),
+      0px 2px 4px 0px rgb(0 0 0 / 12%);
+    z-index: 2;
+  }
 }
 
 .card-container {
-  height: 60px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  align-items: center;
-  cursor: pointer;
-  padding: 0;
-  margin: 0;
-
   &__inner {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-
     &__heading {
       padding: 0;
       margin: 0;
@@ -64,12 +44,6 @@
       font-size: 16px;
     }
   }
-}
-
-.ripple-container {
-  padding: 20px;
-  cursor: pointer;
-  margin: 0;
 }
 
 .formForTitle {
