--- a/project-management-app/src/app/tasks/components/task-item/task-item.component.scss
+++ b/project-management-app/src/app/tasks/components/task-item/task-item.component.scss
@@ -1,21 +1,73 @@
 .task-item {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
-  align-items: center;
-  height: 50px;
+  align-items: stretch;
+  height: 80px;
   padding: 0px;
   margin: 3px;
   background-color: #dde2ed;
   border-radius: 2px;
-  // border: 1px solid darken(#e0e0e0, 30);
   border: none;
   box-sizing: border-box;
   cursor: pointer;
 
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+
+  &:hover {
+    box-shadow: 0px 3px 1px -1px rgb(0 0 0 / 20%), 0px 2px 1px 0px rgb(0 0 0 / 14%),
+      0px 1px 3px 0px rgb(0 0 0 / 12%);
+    z-index: 2;
+  }
+
+  &__header,
+  &__footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    margin: 0px;
+    height: 15px;
+  }
+  &__header {
+    padding: 0 10px 0 20px;
+  }
+  &__footer {
+    padding: 0 20px 0 20px;
+  }
+  &__chips-container {
+    max-width: 120px;
+    text-overflow: clip;
+    overflow: hidden;
+    white-space: nowrap;
+    height: 40px;
+    &__full {
+      position: relative;
+      overflow: visible;
+      height: max-content;
+      background-color: darken(#e0e0e0, 60);
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      z-index: 10;
+      border-radius: 7px;
+    }
+  }
+  &__chips {
+    min-height: 30px;
+    font-size: 12px;
+    padding: 2px, 5px, 2px, 5px;
+  }
   &__heading {
     display: inline-block;
-    padding: 0 0 0 30px;
+    padding: 0;
     margin: 0;
     width: 220px;
     text-overflow: ellipsis;
