--- a/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
+++ b/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{ configDialog.title }}</h2>
 
 <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="createBoardForm">
-  <div class="owner" *ngIf="user$ | async as user" >Board Owner: {{ user.name }}</div>
+  <div class="owner" *ngIf="user$ | async as user">Board Owner: {{ user.name }}</div>
   <h5 class="description">{{ configDialog.description }}</h5>
   <mat-dialog-content class="mat-typography modalContent">
     <div>
@@ -15,13 +15,12 @@
           name="title"
           formControlName="title"
           [(ngModel)]="value"
+          (blur)="getTitleErrorMessage()"
         />
         <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value = ''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-
-      <div *ngIf="createBoardForm.get('title')?.errors?.['required']">Title is required</div>
     </div>
     <div>
       <app-users-search
@@ -37,6 +36,11 @@
       ></app-users-search>
     </div>
   </mat-dialog-content>
+  <div class="errors-container">
+    <div class="errors-container__type" *ngIf="createBoardForm.get('title')?.invalid">
+      <mat-error *ngFor="let error of titleErrors">{{ error }} </mat-error>
+    </div>
+  </div>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close (click)="closeModal()">Cancel</button>
     <button
