--- a/project-management-app/src/app/tasks/components/create-column-dialog/create-column-dialog.component.html
+++ b/project-management-app/src/app/tasks/components/create-column-dialog/create-column-dialog.component.html
@@ -15,15 +15,19 @@
           name="title"
           formControlName="title"
           [(ngModel)]="value"
+          (blur)="getTitleErrorMessage()"
         />
         <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value = ''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-
-      <div *ngIf="createColumnForm.get('title')?.errors?.['required']">Title is required</div>
     </div>
   </mat-dialog-content>
+  <div class="errors-container">
+    <div class="errors-container__type" *ngIf="createColumnForm.get('title')?.invalid">
+      <mat-error *ngFor="let error of titleErrors">{{ error }} </mat-error>
+    </div>
+  </div>
   <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close (click)="closeModal()">Cancel</button>
     <button
