--- a/project-management-app/src/app/pm-app/pages/welcome-page/welcome-page.component.html
+++ b/project-management-app/src/app/pm-app/pages/welcome-page/welcome-page.component.html
@@ -1,1 +1,99 @@
-<p>welcome-page works!</p>
+<div class="container_wide">
+  <section class="left">
+    <div class="quote">
+      <h3 class="quote__text">
+        Everything you do should be done well, even if you commit madness.
+      </h3>
+      <span>Honore de Balzac</span>
+    </div>
+
+    <div class="quote__down">
+      <h3>
+        Do it well<br />
+        with our Kanban board!
+      </h3>
+    </div>
+  </section>
+  <section class="right">
+    <div class="right_1">
+      <div class="top">
+        <div class="sticker sticker_1">
+          <div class="sticker__inner">
+            <h3 class="sticker__text">
+              Just simple <br />
+              Kanban Board
+            </h3>
+          </div>
+        </div>
+        <div class="sticker sticker_2">
+          <div class="sticker__inner">
+            <h3>Why to use<br />Kanban board?</h3>
+            <a class="sticker__text-link" href="https://www.atlassian.com/agile/kanban/boards"
+              ><h3>Ask our competitors</h3></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="sticker sticker_3">
+          <div class="sticker__inner">
+            <ul class="right__list">
+              <li class="right__list-item">
+                <mat-icon color="primary">done_outline</mat-icon>Create boards
+              </li>
+              <li class="right__list-item">
+                <mat-icon color="primary">done_outline</mat-icon>Rearrange tasks / columns
+              </li>
+              <li class="right__list-item">
+                <mat-icon color="primary">done_outline</mat-icon>Search tasks
+              </li>
+              <li class="right__list-item">
+                <mat-icon color="primary">done_outline</mat-icon>Select users
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="right_2">
+      <div class="sticker sticker_4">
+        <div class="sticker__inner">
+          <h3 class="sticker__text">Created with</h3>
+          <div class="sticker__imgContainer">
+            <div class="logosRow">
+              <img src="../../../../assets/heart.png" alt="heart" height="30px" /> and
+            </div>
+            <div class="logosRow">
+              <img
+                class="sticker__img"
+                src="../../../../assets/angular-logo.png"
+                alt="angular Logo"
+                height="30px"
+              />
+
+              <img
+                src="../../../../assets/Typescript_logo.png"
+                alt="Typescript_logo Logo"
+                height="30px"
+              />
+              <img src="../../../../assets/ngrx.svg" alt="ngrx Logo" height="30px" />
+              <img src="../../../../assets/rxjs-1.svg" alt="rxjs Logo" height="30px" />
+              <img src="../../../../assets/scss-logo.png" alt="scss Logo" height="30px" />
+              <img src="../../../../assets/material.png" alt="material Logo" height="30px" />
+            </div>
+          </div>
+
+          <h3 class="sticker__text">during the</h3>
+          <div>
+            <a
+              class="sticker__course"
+              href="https://github.com/rolling-scopes-school/js-fe-course-en/tree/main/UpSkillMe"
+              ><img src="../../../../assets/epam-logo.png" alt="epam logo" height="30px" />
+              UpSkillMe course</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
