--- a/project-management-app/src/app/boards/components/board-preview/board-preview.component.html
+++ b/project-management-app/src/app/boards/components/board-preview/board-preview.component.html
@@ -46,19 +46,23 @@
         matTooltip="{{ board.owner | usernameById | async }}"
         [matTooltipShowDelay]="500"
         matTooltipPosition="above"
+        class="item__chips"
         >{{ board.owner | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
       >
     </mat-chip-list>
     <mat-chip-list aria-label="Users"
       >Users:
       <div class="hidden-overflow">
+        <!-- <div *ngIf="!(isLoading$ | async)"> -->
         <mat-chip
           *ngFor="let user of board.users"
           matTooltip="{{ user | usernameById | async }}"
           [matTooltipShowDelay]="500"
           matTooltipPosition="above"
+          class="item__chips"
           >{{ user | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
         >
+        <!-- </div> -->
       </div>
     </mat-chip-list>
   </mat-card-content>
