--- a/project-management-app/src/app/boards/components/board-preview/board-preview.component.scss
+++ b/project-management-app/src/app/boards/components/board-preview/board-preview.component.scss
@@ -8,26 +8,25 @@
   align-items: center;
   cursor: pointer;
   background-color: lighten(#d9dde3, 10);
-  transition: all 0.2s ease-in-out;
+  box-shadow: inset 0 0 15px rgb(190, 193, 213);
+  transition: all 0.1s ease-in-out;
 
   &:hover {
-    box-shadow: 0px 3px 1px -1px rgb(0 0 0 / 20%), 0px 2px 1px 0px rgb(0 0 0 / 14%),
-      0px 1px 3px 0px rgb(0 0 0 / 12%);
-    background-color: #c2cfe3;
-    z-index: 2;
+    box-shadow: inset 0 0 35px #4747478a;
   }
   &__inner {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    width: 280px;
 
     &__heading {
       padding: 0;
       margin: 0;
       display: inline-block;
-      width: 280px;
       font-size: 20px;
+      text-align: center;
     }
   }
 }
@@ -40,14 +39,15 @@
   margin: 0;
 }
 
+.item__chips {
+  background-color: rgb(63 81 181 / 18%);
+}
+
 .hidden-overflow {
-  height: 1.2rm;
+  // height: 1.2rm;
   width: 80%;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-}
-
-mat-chip {
-  min-height: 30px;
+  content-visibility: auto;
 }
