--- a/project-management-app/src/app/boards/components/board-view/board-view.component.html
+++ b/project-management-app/src/app/boards/components/board-view/board-view.component.html
@@ -9,6 +9,7 @@
         matTooltip="{{ board.owner | usernameById | async }}"
         [matTooltipShowDelay]="500"
         matTooltipPosition="above"
+        class="item__chips"
         >{{ board.owner | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
       >
     </mat-chip-list>
@@ -20,6 +21,7 @@
             matTooltip="{{ user | usernameById | async }}"
             [matTooltipShowDelay]="500"
             matTooltipPosition="above"
+            class="item__chips"
             *ngFor="let user of board.users"
             >{{ user | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
           >
