--- a/project-management-app/src/app/boards/components/boards-list/boards-list.component.scss
+++ b/project-management-app/src/app/boards/components/boards-list/boards-list.component.scss
@@ -17,6 +17,10 @@
   align-items: center;
   background-color: #dde2ed;
   margin-bottom: 20px;
+  box-shadow: inset 0 0 15px rgb(190, 193, 213);
+  &:hover {
+    box-shadow: inset 0 0 45px #4747478a;
+  }
 
   &__inner {
     display: flex;
