--- a/project-management-app/src/app/core/components/header/header.component.scss
+++ b/project-management-app/src/app/core/components/header/header.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   height: 80px;
   box-sizing: border-box;
   // padding: 10px;
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+    align-self: center;
     justify-content: space-between;
     align-items: center;
     color: white;
