--- a/project-management-app/src/app/tasks/components/column-item/column-item.component.scss
+++ b/project-management-app/src/app/tasks/components/column-item/column-item.component.scss
@@ -26,11 +26,9 @@
   border-radius: 7px;
   border: none;
   overflow: hidden;
-
   &:hover {
-    box-shadow: 0px 4px 2px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%),
-      0px 2px 4px 0px rgb(0 0 0 / 12%);
-    z-index: 2;
+    background-color: darken(#e0e0e0, 75);
+    box-shadow: inset 0 0 30px black;
   }
 }
 
