--- a/project-management-app/src/app/tasks/components/task-item/task-item.component.scss
+++ b/project-management-app/src/app/tasks/components/task-item/task-item.component.scss
@@ -11,6 +11,7 @@
   border: 1px solid darken(#dde2ed, 10);
   box-sizing: border-box;
   cursor: pointer;
+  box-shadow: inset 0 0 15px rgb(190, 193, 213);
 
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -21,10 +22,7 @@
   user-select: none;
 
   &:hover {
-    box-shadow: 0px 3px 1px -1px rgb(0 0 0 / 20%), 0px 2px 1px 0px rgb(0 0 0 / 14%),
-      0px 1px 3px 0px rgb(0 0 0 / 12%);
-    background-color: #c2cfe3;
-    z-index: 2;
+    box-shadow: inset 0 0 35px #4747478a;
   }
 
   &__header,
@@ -53,7 +51,7 @@
       position: relative;
       overflow: visible;
       height: max-content;
-      background-color: darken(#e0e0e0, 60);
+      background-color: #e0e0e0;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -65,6 +63,7 @@
     min-height: 30px;
     font-size: 12px;
     padding: 2px, 5px, 2px, 5px;
+    background-color: rgb(63 81 181 / 18%);
   }
   &__heading {
     display: inline-block;
