--- a/project-management-app/src/app/tasks/pages/board-item-page/board-item-page.component.scss
+++ b/project-management-app/src/app/tasks/pages/board-item-page/board-item-page.component.scss
@@ -18,6 +18,7 @@
 
 .columns-container::-webkit-scrollbar-thumb {
   background: rgb(146, 153, 163);
+  box-shadow: inset 0 0 5px rgb(45, 46, 51);
   border-radius: 10px;
 }
 
