--- a/project-management-app/src/app/users/components/users-search/users-search.component.scss
+++ b/project-management-app/src/app/users/components/users-search/users-search.component.scss
@@ -1,47 +1,47 @@
-// label {
-//   display: block;
-//   font-weight: bold;
-//   font-size: 1.2rem;
-//   margin-top: 1rem;
-//   margin-bottom: 0.5rem;
-// }
-// input {
-//   padding: 0.5rem;
-//   width: 100%;
-//   max-width: 600px;
-//   box-sizing: border-box;
-//   display: block;
-// }
+label {
+  display: block;
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+input {
+  padding: 0.5rem;
+  width: 100%;
+  max-width: 600px;
+  box-sizing: border-box;
+  display: block;
+}
 
-// input:focus {
-//   outline: #336699 auto 1px;
-// }
+input:focus {
+  outline: #336699 auto 1px;
+}
 
-// li {
-//   list-style-type: none;
-// }
-// .search-result li a {
-//   border-bottom: 1px solid gray;
-//   border-left: 1px solid gray;
-//   border-right: 1px solid gray;
-//   display: inline-block;
-//   width: 100%;
-//   max-width: 600px;
-//   padding: 0.5rem;
-//   box-sizing: border-box;
-//   text-decoration: none;
-//   color: black;
-// }
+li {
+  list-style-type: none;
+}
+.search-result li a {
+  border-bottom: 1px solid gray;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  display: inline-block;
+  width: 100%;
+  max-width: 600px;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  text-decoration: none;
+  color: black;
+}
 
-// .search-result li a:hover {
-//   background-color: #435a60;
-//   color: white;
-// }
+.search-result li a:hover {
+  background-color: #435a60;
+  color: white;
+}
 
-// ul.search-result {
-//   margin-top: 0;
-//   padding-left: 0;
-// }
+ul.search-result {
+  margin-top: 0;
+  padding-left: 0;
+}
 
 .example-chip-list {
   width: 100%;
@@ -64,4 +64,22 @@
 .optionsFound {
   height: 90px;
   overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(45, 46, 51);
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgb(146, 153, 163);
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: darken(rgb(146, 153, 163), 20);
+  }
 }
